# owlpost

./: .gitignore  LICENSE  README.md  accounts.example.toml  pyproject.toml
src/owlpost/: __init__.py  account.py  config.py  folders.py  messages.py  sending.py  server.py  threads.py
