[project]
name = "owlpost"
version = "0.1.0"
description = "High-fidelity IMAP/SMTP MCP server for iCloud, Gmail, and other mail providers"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Sumeet Singh Mankoo", email = "sumeet@mankoo.ca" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "imap",
    "smtp",
    "email",
    "icloud",
    "gmail",
    "claude",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Communications :: Email :: Post-Office :: IMAP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/smankoo/owlpost"
Repository = "https://github.com/smankoo/owlpost"
Issues = "https://github.com/smankoo/owlpost/issues"

[project.scripts]
owlpost = "owlpost.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/owlpost"]

[tool.hatch.build.targets.sdist]
include = [
    "src/owlpost",
    "README.md",
    "LICENSE",
    "accounts.example.toml",
]
